# circuit

./: .gitignore  CMakeLists.txt  EXAMPLE.md  README.md  circuit.json  circuit.yml  package.json
.github/workflows/: test.yml
src/: factory.h  index.h  interface.h
src/impl/: circuit_host.h  circuit_host.hpp  circuit_host.hxx  queue.h  queue.hpp  stack.h  stack.hpp
test/: CMakeLists.txt  build_and_run  em_build_and_run  test.yml
test/lib/asserter/: .gitrepo
test/lib/asserter/src/: asserter.hpp
test/src/: example.cpp  main.cpp
